--- a/nachos-3.4/code/test/Makefile
+++ b/nachos-3.4/code/test/Makefile
@@ -35,7 +35,7 @@ CPP = gcc -E
 INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt shell matmult sort Sub PrintChar ReadString
+all: halt shell matmult sort Sub PrintChar ReadString PrintInt ReadChar
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.c > strt.s
@@ -83,3 +83,15 @@ ReadString.o: ReadString.c
 ReadString: ReadString.o start.o
 	$(LD) $(LDFLAGS) start.o ReadString.o -o ReadString.coff
 	../bin/coff2noff ReadString.coff ReadString
+	
+PrintInt.o: PrintInt.c
+	$(CC) $(CFLAGS) -c PrintInt.c
+PrintInt: PrintInt.o start.o
+	$(LD) $(LDFLAGS) start.o PrintInt.o -o PrintInt.coff
+	../bin/coff2noff PrintInt.coff PrintInt
+
+ReadChar.o: ReadChar.c
+	$(CC) $(CFLAGS) -c ReadChar.c
+ReadChar: ReadChar.o start.o
+	$(LD) $(LDFLAGS) start.o ReadChar.o -o ReadChar.coff
+	../bin/coff2noff ReadChar.coff ReadChar
